@@ -1,4 +1,4 @@
-package org.restlet.example.book.restlet.ch05.sec2;
+package org.restlet.example.book.restlet.ch05.sec2.sub2;
 
 import org.restlet.representation.Representation;
 import org.restlet.resource.ClientResource;
