@@ -35,10 +35,6 @@ import java.io.OutputStream;
 import java.util.Map;
 import java.util.TreeMap;
 
-import javax.xml.namespace.QName;
-import javax.xml.xpath.XPath;
-import javax.xml.xpath.XPathFactory;
-
 import org.jibx.runtime.BindingDirectory;
 import org.jibx.runtime.IBindingFactory;
 import org.jibx.runtime.IMarshallingContext;
@@ -47,7 +43,6 @@ import org.jibx.runtime.JiBXException;
 import org.restlet.data.MediaType;
 import org.restlet.ext.xml.XmlRepresentation;
 import org.restlet.representation.Representation;
-import org.w3c.dom.Document;
 import org.xml.sax.InputSource;
 
 /**
@@ -187,26 +182,6 @@ public class JibxRepresentation<T> extends XmlRepresentation {
         this.bindingName = bindingName;
     }
 
-    @Override
-    public Object evaluate(String expression, QName returnType)
-            throws Exception {
-        Object result = null;
-        final XPath xpath = XPathFactory.newInstance().newXPath();
-        xpath.setNamespaceContext(this);
-
-        final Document xmlDocument = getDocumentBuilder().parse(
-                new InputSource(this.xmlRepresentation.getReader()));
-
-        if (xmlDocument != null) {
-            result = xpath.evaluate(expression, xmlDocument, returnType);
-        } else {
-            throw new Exception(
-                    "Unable to obtain a DOM document for the XML representation. "
-                            + "XPath evaluation cancelled.");
-        }
-        return result;
-    }
-
     /**
      * Returns the document encoding to use for marshalling. The default value
      * is UTF-8.
@@ -215,6 +190,11 @@ public class JibxRepresentation<T> extends XmlRepresentation {
      */
     public String getEncoding() {
         return this.encoding;
+    }
+
+    @Override
+    public InputSource getInputSource() throws IOException {
+        return new InputSource(this.xmlRepresentation.getReader());
     }
 
     /**
