@@ -26,6 +26,8 @@ Changes log
           renamed to copy(...).
         - Removed all Client#get/post/put/... methods not present in 
           Restlet 1.1.
+        - Refactored XML extensions to share XPath evaluation logic.
+          Added XmlRepresentation#getInputSource() abstract method.
     - Enhancements
         - UniformResource#doCatch now extract the cause exception from
           caught ResourceException instance for easier debugging.
